Fix a possible memory leak when loading IR models. Finish the README. Add temporary resource icons for the Editor/FAB. Fix a warning that was being caused by not properly depending on the NNERuntimeORT plugin.

--- a/NNERuntimeOpenVINO.uplugin
+++ b/NNERuntimeOpenVINO.uplugin
@@ -23,5 +23,14 @@
 			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "NNERuntimeORT",
+			"Enabled": true,
+			"TargetAllowList": [
+				"Editor"
+			]
+		}
 	]
 }
